--- a/tiktok_clone/pubspec.yaml
+++ b/tiktok_clone/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.5
+  firebase_auth: ^3.10.0
+  firebase_core: ^1.23.0
+  firebase_storage: ^10.3.9
+  cloud_firestore: ^3.4.9
 
 dev_dependencies:
   flutter_test:
