--- a/tiktok_clone/pubspec.yaml
+++ b/tiktok_clone/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^1.23.0
   firebase_storage: ^10.3.9
   cloud_firestore: ^3.4.9
+  lint: ^1.10.0
 
 dev_dependencies:
   flutter_test:
