--- a/tiktok_clone/pubspec.yaml
+++ b/tiktok_clone/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_core: ^1.23.0
   firebase_storage: ^10.3.9
   cloud_firestore: ^3.4.9
+  lint: ^1.10.0
+  flutter_svg: ^1.1.5
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +70,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    -  assets/images/
+   -  assets/my-icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
