--- a/tiktok_clone/pubspec.yaml
+++ b/tiktok_clone/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^3.4.9
   lint: ^1.10.0
   flutter_svg: ^1.1.5
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
