--- a/tiktok_clone/pubspec.yaml
+++ b/tiktok_clone/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   lint: ^1.10.0
   flutter_svg: ^1.1.5
   image_picker: ^0.8.6
+  video_player: ^2.4.7
+  video_compress: ^3.1.0
 
 dev_dependencies:
   flutter_test:
