--- a/tiktok_clone/pubspec.yaml
+++ b/tiktok_clone/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   image_picker: ^0.8.6
   video_player: ^2.4.7
   video_compress: ^3.1.0
+  timeago: ^3.3.0
+  font_awesome_flutter: ^10.2.1
 
 dev_dependencies:
   flutter_test:
