--- a/tiktok_clone/pubspec.yaml
+++ b/tiktok_clone/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   path_provider: ^2.0.11
   expandable_text: ^2.3.0
   flutter_native_splash: ^2.2.14
+  video_thumbnail: ^0.5.3
   
 
 dev_dependencies:
