--- a/tiktok_clone/android/app/src/main/AndroidManifest.xml
+++ b/tiktok_clone/android/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
    <application
         android:label="tiktok_clone"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
         android:usesCleartextTraffic="true"
+        android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -12,6 +12,8 @@
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
+            android:usesCleartextTraffic="true"
+            android:largeHeap="true"
             android:windowSoftInputMode="adjustResize">
             <!-- Specifies an Android theme to apply to this Activity as soon as
                  the Android process has started. This theme is visible to the user
