--- a/tiktok_clone/pubspec.yaml
+++ b/tiktok_clone/pubspec.yaml
@@ -31,18 +31,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  simple_animations: ^1.3.3
+  simple_animations: ^5.0.0+3
   cached_network_image: ^3.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
-  firebase_auth: ^3.10.0
-  firebase_core: ^1.23.0
+  firebase_auth: ^4.1.3
+  firebase_core: ^2.3.0
   marquee: ^2.2.3
-  firebase_storage: ^10.3.9
-  cloud_firestore: ^3.4.9
+  firebase_storage: ^11.0.6
+  cloud_firestore: ^4.1.0
   lint: ^1.10.0
   flutter_svg: ^1.1.5
   image_picker: ^0.8.6
@@ -57,13 +57,15 @@ dependencies:
   expandable_text: ^2.3.0
   flutter_native_splash: ^2.2.14
   video_thumbnail: ^0.5.3
+  lottie: ^2.0.0
+  connectivity: ^3.0.6
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_launcher_icons: "^0.10.0"
+  flutter_launcher_icons: ^0.11.0
 
 flutter_icons:
   android: true
