--- a/tiktok_clone/ios/Runner/Info.plist
+++ b/tiktok_clone/ios/Runner/Info.plist
@@ -60,5 +60,9 @@
 		<true/>
 		<key>UIStatusBarHidden</key>
 		<false/>
+		<key>NSCameraUsageDescription</key>
+        <string>your usage description here</string>
+        <key>NSMicrophoneUsageDescription</key>
+        <string>your usage description here</string>
 	</dict>
 </plist>
